--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,7 +12,6 @@
     "com.unity.inputsystem": "1.14.2",
     "com.unity.mathematics": "1.3.2",
     "com.unity.multiplayer.center": "1.0.0",
-    "com.unity.multiplayer.tools": "2.2.6",
     "com.unity.netcode.gameobjects": "2.6.0",
     "com.unity.nuget.mono-cecil": "1.11.5",
     "com.unity.package-validation-suite": "0.22.0-preview",
@@ -26,6 +25,7 @@
     "com.unity.test-framework": "1.6.0",
     "com.unity.test-framework.performance": "3.2.0",
     "com.unity.timeline": "1.8.9",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.11",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.9",
     "com.unity.modules.accessibility": "1.0.0",
