fix: 프리팹 네트워크 동기화 개선

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ InitTestScene*.unity*
 /[Aa]ssets/Cute Dolls.meta
 /[Aa]ssets/Puzzle3DassetPack/
 /[Aa]ssets/Puzzle3DassetPack.meta
+Assets/Editor/BotLauncher.cs
