--- a/.gitignore
+++ b/.gitignore
@@ -103,4 +103,4 @@ InitTestScene*.unity*
 /[Aa]ssets/Cute Dolls.meta
 /[Aa]ssets/Puzzle3DassetPack/
 /[Aa]ssets/Puzzle3DassetPack.meta
-Assets/Editor/BotLauncher.cs
+/[Aa]ssets/Editor/BotLauncher.cs
